# codex-memory-skill

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: branding-prompts.md  readme-rewrite-brief.md
docs/prompts/: logo.txt  social-card.txt
examples/: benchmark-cases.json
examples/benchmark-fixture/memory/: context.md
examples/benchmark-fixture/memory/runbooks/: ccglm-long-task-review-loop.md  codex-app-update-thread-and-config-recovery.md  codex-wsl-windows-shell-utf8-bridge-and-absolute-path-bypass.md  default-code-review-stack-main-subagent-ccglm.md  genericagent-memory-retrieval-and-review-entry.md  (+4 more)
scripts/: build_asset_index.py  codex_memo.py  memory_benchmark.py
scripts/lib/: evolution_promote.py  evolution_schema.py  memory_viewer_governance.py  memory_viewer_route.py  memory_viewer_snapshot.py  query_intel.py  reuse_learning.py  semantic_store.py  session_archive.py  verifier_sidecar.py
skills/project-memory-loop/: SKILL.md
skills/project-memory-loop/references/: gpt54-agent-loop.md  handbook-style.md  handbook-update-rules.md  known-gotchas.md  memory-governance.md  项目说明书.reference模板.md  项目说明书模板.md
skills/project-memory-loop/rules/: core-boundaries.md
skills/project-memory-loop/scripts/: bootstrap_project_codex.py  codex_memo.py  memory_benchmark.py  memory_tool.py  task_status.py
skills/project-memory-loop/workflows/: closeout-protocol.md  memory-hygiene-and-enrichment-loop.md  memory-skill-promotion-loop.md  runtime-protocol.md
tests/: test_readme_contract.py  test_regressions.py  test_smoke.py
(+13 files in other folders)
